<resources>
    <string name="app_name">KotlinRxJavaEx</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="movie_info">Movie Info</string>
    <string name="rate_button">Rate This Movie Now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie:</string>
    <string name="movie_date">Release date:</string>
    <string name="movie_rating">Rating:</string>
    <string name="add_movie_to_watch_list">Add movie to watch list</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="my_app">My App</string>
    <string name="remove_movie_from_watch_list">Remove</string>
    <string name="menu_compose">compose</string>
    <string name="menu_news_title">News</string>
    <string name="menu_movies_title">Movies</string>
    <string name="search">Search</string>
    <string name="save_news_article_to_db">Save news article to DB</string>

    <!--======================TabLayout Titles=======================-->
    <string name="newsfrag_tab1_title">Headlines</string>
    <string name="newsfrag_tab2_title">Saved</string>
    <string name="moviefrag_tab1_title">Top 20</string>
    <string name="moviefrag_tab2_title">Watch List</string>
    <string name="news_refresh_button">Refresh</string>
    <string name="news_error_tv">Something went wrong!</string>
    <string name="movie_image">movie_image</string>
    <string name="news_image">news_image</string>
    <string name="rate_this_movie_now">Rate This Movie Now</string>
    <string name="synopsis">Synopsis</string>
</resources>