<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MovieDetailActivity"
    tools:showIn="@layout/activity_movie_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ad">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_movie_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_movie_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/movie_name"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintTop_creator="1" />

                <TextView
                    android:id="@+id/tv_movie_detail_rating1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/movie_rating"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title" />


                <TextView
                    android:id="@+id/tv_movie_detail_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/movie_rating"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_detail_rating1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title"
                    tools:layout_constraintTop_creator="1" />

                <TextView
                    android:id="@+id/tv_movie_detail_release_date1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/movie_date"
                    android:textSize="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_rating1" />


                <TextView
                    android:id="@+id/tv_movie_detail_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="@string/movie_date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/tv_movie_detail_release_date1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_rating" />

                <TextView
                    android:id="@+id/tv_movie_detail_plot1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="Synopsis"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_release_date1" />

                <TextView
                    android:id="@+id/tv_movie_detail_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_plot1" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:numStars="5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_plot" />

                <Button
                    android:id="@+id/btn_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:text="Rate This Movie Now"
                    android:textColor="@android:color/holo_orange_light"
                    android:visibility="visible"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>