<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="movie"
            type="com.rupesh.kotlinrxjavaex.data.movie.model.Movie" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.features.movie.fragment.MovieDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ct_movie_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginEnd="64dp"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

                <ImageView
                    android:id="@+id/iv_movie_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    loadMovieImageFromUrl="@{movie.posterPath}"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:navigationIcon="@drawable/ic_arrow_back_24"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                tools:showIn="@layout/fragment_movie_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_movie_detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:textColor="@color/black"
                        android:text="@{movie.originalTitle}"
                        android:textSize="20sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_constraintLeft_creator="1"
                        tools:layout_constraintTop_creator="1" />

                    <TextView
                        android:id="@+id/tv_movie_detail_rating1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/movie_rating"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title" />

                    <TextView
                        android:id="@+id/tv_movie_detail_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@{String.valueOf(movie.voteAverage)}"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/tv_movie_detail_rating1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_title"
                        tools:layout_constraintTop_creator="1" />

                    <TextView
                        android:id="@+id/tv_movie_detail_release_date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/movie_date"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_rating1" />

                    <TextView
                        android:id="@+id/tv_movie_detail_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@{movie.releaseDate}"
                        android:textSize="20sp"
                        app:layout_constraintStart_toEndOf="@+id/tv_movie_detail_release_date1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_rating" />

                    <TextView
                        android:id="@+id/tv_movie_detail_plot1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:text="@string/synopsis"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_release_date1" />

                    <TextView
                        android:id="@+id/tv_movie_detail_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:textSize="20sp"
                        android:text="@{movie.overview}"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_plot1" />

                    <RatingBar
                        android:id="@+id/rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:numStars="5"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_movie_detail_plot" />

                    <Button
                        android:id="@+id/btn_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/rate_this_movie_now"
                        android:textColor="#BF360C"
                        android:visibility="visible"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rating_bar" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

            <!--include
                android:id="@+id/layout_content_movie_detail"
                layout="@layout/layout_content_movie_detail"
                bind:movie="@{movie}"/-->

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
